Use alpine for mongodb-proxy

--- a/mongodb-proxy/Dockerfile
+++ b/mongodb-proxy/Dockerfile
@@ -1,11 +1,13 @@
-FROM node:8.12
+FROM node:8-alpine
 
-RUN apt-get update && apt-get install -y unzip
+RUN apk add unzip curl
 
 RUN mkdir /opt/mongodb-proxy
 RUN curl -L https://github.com/JamesOsgood/mongodb-grafana/archive/master.zip > /tmp/master.zip && \
   cd /opt/mongodb-proxy && unzip /tmp/master.zip && cd mongodb-grafana-master && \
   npm install
+
+RUN apk del unzip curl
 
 EXPOSE 3333
 
