Use tagged version

--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -1,5 +1,5 @@
 FROM grafana/grafana
 
 RUN grafana-cli plugins install grafana-worldmap-panel
-RUN grafana-cli --pluginUrl https://github.com/thebristolcable/mongodb-grafana/archive/master.zip \
+RUN grafana-cli --pluginUrl https://github.com/thebristolcable/mongodb-grafana/archive/0.8.2.zip \
     plugins install grafana-mongodb-datasource
