--- a/mongodb-proxy/Dockerfile
+++ b/mongodb-proxy/Dockerfile
@@ -3,14 +3,14 @@ FROM node:8-alpine
 RUN apk add unzip curl
 
 RUN mkdir /opt/mongodb-proxy
-RUN curl -L https://github.com/thebristolcable/mongodb-grafana/archive/master.zip > /tmp/master.zip && \
-  cd /opt/mongodb-proxy && unzip /tmp/master.zip && cd mongodb-grafana-master && \
+RUN curl -L https://github.com/thebristolcable/mongodb-grafana/archive/0.8.2.zip > /tmp/master.zip && \
+  cd /opt/mongodb-proxy && unzip /tmp/master.zip && cd mongodb-grafana-0.8.2 && \
   npm install
 
 RUN apk del unzip curl
 
 EXPOSE 3333
 
-WORKDIR /opt/mongodb-proxy/mongodb-grafana-master/dist/server
+WORKDIR /opt/mongodb-proxy/mongodb-grafana-0.8.2/dist/server
 
 CMD [ "node", "mongodb-proxy" ]
