--- a/grafana/Dockerfile
+++ b/grafana/Dockerfile
@@ -1,4 +1,8 @@
-FROM grafana/grafana
+FROM grafana/grafana:6.3.5
+
+RUN mkdir /var/lib/grafana/data
+
+ENV GF_PATHS_DATA=/var/lib/grafana/data
 
 RUN grafana-cli plugins install grafana-worldmap-panel
 RUN grafana-cli --pluginUrl https://github.com/thebristolcable/mongodb-grafana/archive/0.8.2.zip \
